# c2rust-translate

./: .gitignore  CURSOR_POSITION_FIX.md  Cargo.toml  ENHANCED_UI.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  UX_IMPROVEMENTS.md  WORKFLOW_REFACTORING.md  auto_translate.py  requirements.txt  translate_and_fix.py  用户体验改进.md
.c2rust/: .gitattributes  config.toml.example
examples/: test_cursor_position.rs
src/: analyzer.rs  builder.rs  code_rewrite.rs  common_tasks.rs  config.rs  constants.rs  diff_display.rs  error_handler.rs  feature_init.rs  file_processor.rs  file_scanner.rs  git.rs  hybrid_build.rs  initialization.rs  interaction.rs  lib.rs  logger.rs  main.rs  merger.rs  pipeline.rs  progress.rs  setup.rs  stats.rs  suggestion.rs  target_selector.rs  translator.rs  util.rs  verification.rs  workflow.rs
src/translation/: error_handler.rs  mod.rs  verification.rs
src/ui/: diff_display.rs  file_scanner.rs  interaction.rs  mod.rs
src/workflow/: feature_init.rs  mod.rs  steps.rs
tests/: integration_test.rs
tools/: AUTO_TRANSLATE_README.md  USAGE_EXAMPLES.md  WORKFLOW_DIAGRAM.md  auto_translate.py  test_auto_translate.py
tools/auto-translate/: Cargo.toml  README.md
tools/auto-translate/src/: compiler.rs  config.rs  env.rs  git.rs  lib.rs  main.rs  translator.rs
tools/c2rust-translate/: Cargo.toml  README.md
tools/c2rust-translate/src/: commands.rs  error.rs  file_scanner.rs  lib.rs  main.rs  translator.rs
tools/code-analyse/: Cargo.toml
tools/code-analyse/src/: feature.rs  file.rs  main.rs
tools/translate_and_fix/: LLM_calling.py  config.toml  enum_translation.py  function_semantic_fixing.py  function_syntax_fixing.py  function_translation.py  parse_LLM_output.py  syntax_fixing.py  translate_and_fix.py  variable_translation.py  说明文档.md
文档/: 架构说明.md
