[package]
name = "c2rust-translate"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
tempfile = "3.8"
shell-words = "1.1"
colored = "2.1"
regex = "1.10"
lazy_static = "1.5"
terminal_size = "0.4"
inquire = "0.9"

[dev-dependencies]
serial_test = "3.0"
