[package]
name = "c2rust-translate"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
tempfile = "3.8"
shell-words = "1.1"
colored = "2.1"
regex = "1.10"
lazy_static = "1.5"
terminal_size = "0.4"
inquire = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
prettyplease = "0.2"
quote = "1.0"

[dev-dependencies]
serial_test = "3.0"
scopeguard = "1.2"
